logs/dag_id=dag_ETL_JsonData/run_id=manual__2024-10-09T074520.221754+0000/task_id=Create_Table/attempt=1.log
[2024-10-09T07:45:21.649+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-10-09T07:45:21.687+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_ETL_JsonData.Create_Table manual__2024-10-09T07:45:20.221754+00:00 [queued]>
[2024-10-09T07:45:21.698+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_ETL_JsonData.Create_Table manual__2024-10-09T07:45:20.221754+00:00 [queued]>
[2024-10-09T07:45:21.699+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 6
[2024-10-09T07:45:21.715+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): Create_Table> on 2024-10-09 07:45:20.221754+00:00
[2024-10-09T07:45:21.726+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'dag_ETL_JsonData', 'Create_Table', 'manual__2024-10-09T07:45:20.221754+00:00', '--job-id', '693', '--raw', '--subdir', 'DAGS_FOLDER/ETLProject/main.py', '--cfg-path', '/tmp/tmpei_uosyx']
[2024-10-09T07:45:21.729+0000] {standard_task_runner.py:91} INFO - Job 693: Subtask Create_Table
[2024-10-09T07:45:21.743+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=11878) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-10-09T07:45:21.744+0000] {standard_task_runner.py:63} INFO - Started process 11884 to run task
[2024-10-09T07:45:21.780+0000] {task_command.py:426} INFO - Running <TaskInstance: dag_ETL_JsonData.Create_Table manual__2024-10-09T07:45:20.221754+00:00 [running]> on host ecb02e117702
[2024-10-09T07:45:21.884+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='admin' AIRFLOW_CTX_DAG_ID='dag_ETL_JsonData' AIRFLOW_CTX_TASK_ID='Create_Table' AIRFLOW_CTX_EXECUTION_DATE='2024-10-09T07:45:20.221754+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-10-09T07:45:20.221754+00:00'
[2024-10-09T07:45:21.885+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-10-09T07:45:21.905+0000] {sql.py:276} INFO - Executing: Composed([SQL('CREATE TABLE IF NOT EXISTS '), Identifier('test1'), SQL(' ('), SQL('date TIMESTAMP WITH TIME ZONE, track_id VARCHAR, page_id VARCHAR, block_id VARCHAR, search_term VARCHAR, position VARCHAR, region INTEGER, platform VARCHAR, max_position INTEGER, count_event INTEGER'), SQL(')')])
[2024-10-09T07:45:21.918+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-10-09T07:45:21.930+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-10-09T07:45:21.993+0000] {sql.py:470} INFO - Running statement: SQL('CREATE TABLE IF NOT EXISTS '), parameters: None
[2024-10-09T07:45:21.996+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-10-09T07:45:21.997+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 418, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 475, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at end of input
LINE 1: CREATE TABLE IF NOT EXISTS 
                                   ^

[2024-10-09T07:45:22.010+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_ETL_JsonData, task_id=Create_Table, run_id=manual__2024-10-09T07:45:20.221754+00:00, execution_date=20241009T074520, start_date=20241009T074521, end_date=20241009T074522
[2024-10-09T07:45:22.026+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 693 for task Create_Table (syntax error at end of input
LINE 1: CREATE TABLE IF NOT EXISTS 
                                   ^
; 11884)
[2024-10-09T07:45:22.039+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-10-09T07:45:22.061+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-10-09T07:45:22.064+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
